@@ -1,24 +1,28 @@
 package net.discdd.client.bundlerouting;
 
-import net.discdd.bundlerouting.WindowUtils.CircularBuffer;
 import net.discdd.bundlerouting.WindowUtils.WindowExceptions.BufferOverflow;
 import net.discdd.bundlesecurity.BundleIDGenerator;
 import net.discdd.client.bundlesecurity.ClientSecurity;
+import net.discdd.utils.Constants;
 import org.whispersystems.libsignal.InvalidKeyException;
 
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.security.GeneralSecurityException;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.logging.Logger;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.logging.Level.FINE;
 import static java.util.logging.Level.INFO;
+import static java.util.logging.Level.SEVERE;
 import static java.util.logging.Level.WARNING;
 
+// TODO: I'm not sure if this class is worthwhile. We can easily generate a sequence of needed
+//       encryptedBundleIds on the fly.
 public class ClientWindow {
 
     private static final Logger logger = Logger.getLogger(ClientWindow.class.getName());
@@ -28,13 +32,11 @@ public class ClientWindow {
     final private Path clientWindowDataPath;
     final private String WINDOW_FILE = "clientWindow.csv";
 
-    private final CircularBuffer window;
-    private String clientID = null;
-    private int windowLength = 10; /* Default Value */
+    record UnencryptedBundleId(String bundleId, long bundleCounter) {}
 
-    /* Begin and End are used as Unsigned Long */
-    private long begin = 0;
-    private long end = 0;
+    private final LinkedList<UnencryptedBundleId> windowOfUnencryptedBundleIds = new LinkedList<>();
+    private final String clientID;
+    private int windowLength = 10; /* Default Value */
 
     /* Generates bundleIDs for window slots
      * Parameter:
@@ -43,33 +45,44 @@ public class ClientWindow {
      * Returns:
      * None
      */
-    private void fillWindow(int count, long startCounter) throws BufferOverflow, IOException {
+    private void fillWindow(long startCounter, int count) throws IOException {
         long length = startCounter + count;
 
         for (long i = startCounter; i < length; ++i) {
-            window.add(BundleIDGenerator.generateBundleID(this.clientID, i, BundleIDGenerator.DOWNSTREAM));
+            String bundleId = BundleIDGenerator.generateBundleID(this.clientID, i, BundleIDGenerator.DOWNSTREAM);
+            windowOfUnencryptedBundleIds.add(new UnencryptedBundleId(bundleId, i));
         }
 
-        end = begin + windowLength;
         updateDBWindow();
     }
 
     private void updateDBWindow() throws IOException {
         var dbFile = clientWindowDataPath.resolve(WINDOW_FILE);
 
-        Files.write(dbFile, String.format(Locale.US, "%d,%d,%d", begin, end, windowLength).getBytes());
+        Files.write(dbFile,
+                    String.format(Locale.US, "%d,%d,%d", windowOfUnencryptedBundleIds.getFirst().bundleCounter(),
+                                  windowOfUnencryptedBundleIds.getLast().bundleCounter(), windowLength).getBytes());
     }
 
     private void initializeWindow() throws IOException {
         var dbFile = clientWindowDataPath.resolve(WINDOW_FILE);
+        var start = 0L;
+        windowLength = Constants.DEFAULT_WINDOW_SIZE;
+        var end = start + windowLength - 1;
 
-        String dbData = new String(Files.readAllBytes(dbFile), UTF_8);
-
-        String[] dbCSV = dbData.split(",");
-
-        begin = Long.parseLong(dbCSV[0]);
-        end = Long.parseLong(dbCSV[1]);
-        windowLength = Integer.parseInt(dbCSV[2]);
+        try {
+            String dbData = Files.readString(dbFile);
+            String[] dbCSV = dbData.split(",");
+            start = Long.parseLong(dbCSV[0]);
+            end = Long.parseLong(dbCSV[1]);
+            windowLength = Integer.parseInt(dbCSV[2]);
+        } catch (NoSuchFileException e) {
+            // this is expected the first time
+            logger.log(INFO, "Window File not found -- creating new window");
+        } catch (IOException e) {
+            logger.log(WARNING, "Failed to read Window from Disk -- creating new window", e);
+        }
+        fillWindow(start, (int) (end - start + 1));
     }
 
     /* Allocate and Initialize Window with provided size
@@ -79,9 +92,10 @@ public class ClientWindow {
      * Returns:
      * None
      */
-    private ClientWindow(int length, String clientID, Path rootPath) throws BufferOverflow, IOException {
+    private ClientWindow(int length, String clientID, Path rootPath) {
         clientWindowDataPath = rootPath.resolve(CLIENT_WINDOW_SUBDIR);
         clientWindowDataPath.toFile().mkdirs();
+        this.clientID = clientID;
 
         try {
             initializeWindow();
@@ -93,12 +107,6 @@ public class ClientWindow {
                 logger.log(WARNING, "Invalid window size -- using default size: " + windowLength);
             }
         }
-
-        this.clientID = clientID;
-        window = new CircularBuffer(windowLength);
-
-        /* Initialize Slots */
-        fillWindow(windowLength, begin);
     }
 
     public static ClientWindow initializeInstance(int windowLength, String clientID, Path rootPath) throws BufferOverflow, IOException {
@@ -129,26 +137,19 @@ public class ClientWindow {
         logger.log(FINE, "Largest Bundle ID = " + decryptedBundleID);
         long ack = BundleIDGenerator.getCounterFromBundleID(decryptedBundleID, BundleIDGenerator.DOWNSTREAM);
 
-        if (Long.compareUnsigned(ack, begin) == -1) {
+        long begin = windowOfUnencryptedBundleIds.getFirst().bundleCounter();
+        long end = windowOfUnencryptedBundleIds.getFirst().bundleCounter();
+        if (ack < begin) {
             logger.log(FINE, "Received old [" + ack + " < " + begin + "]");
             return;
-        } else if (Long.compareUnsigned(ack, end) == 1) {
+        } else if (ack > end) {
             logger.log(FINE, "Received Invalid ACK [" + ack + " < " + end + "]");
             return;
         }
 
-        /* Index will be an int as windowLength is int */
-        int ackIndex = (int) Long.remainderUnsigned(ack, windowLength);
+        windowOfUnencryptedBundleIds.removeIf(bundle -> bundle.bundleCounter() <= ack);
 
-        /* Delete ACKs until ackIndex */
-        int noDeleted = window.deleteUntilIndex(ackIndex);
-        if (noDeleted == 0) {
-            logger.log(WARNING, "Received Invalid ACK [" + Long.toUnsignedString(ack) + "]");
-        }
-
-        begin = ack + 1;
-        /* Add new bundleIDs to window */
-        fillWindow(noDeleted, end);
+        fillWindow(end + 1, windowLength - windowOfUnencryptedBundleIds.size());
 
         logger.log(FINE, "Updated Begin: " + Long.toUnsignedString(begin) + "; End: " + Long.toUnsignedString(end));
     }
@@ -160,13 +161,13 @@ public class ClientWindow {
      * None
      */
     public List<String> getWindow(ClientSecurity client) throws InvalidKeyException, GeneralSecurityException {
-        List<String> bundleIDs = window.getBuffer();
-
-        for (int i = 0; i < bundleIDs.size(); ++i) {
-            String bundleID = client.encryptBundleID(bundleIDs.get(i));
-            bundleIDs.set(i, bundleID);
-        }
-
-        return bundleIDs;
+        return windowOfUnencryptedBundleIds.stream().map(ueb -> {
+            try {
+                return client.encryptBundleID(ueb.bundleId);
+            } catch (GeneralSecurityException | InvalidKeyException e) {
+                logger.log(SEVERE, "Failed to encrypt bundleID: " + ueb.bundleId, e);
+            }
+            return null;
+        }).toList();
     }
 }
